--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ pandas==2.0.3
 numpy==1.24.3
 ta-lib==0.4.26
 python-dotenv==1.0.0
-mexc-api==1.0.0
 requests==2.31.0
 websocket-client==1.6.3
+python-dateutil==2.8.2
