--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pandas==2.0.3
-numpy==1.24.3
-ta-lib==0.4.26
-python-dotenv==1.0.0
-requests==2.31.0
-websocket-client==1.6.3
-python-dateutil==2.8.2
+pandas>=2.1.0
+numpy>=1.25.0
+ta-lib
+python-dotenv
+requests
+websocket-client
+python-dateutil
