--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas>=2.1.0
-numpy>=1.25.0
-streamlit>=1.28.0
-plotly>=5.15.0
-requests
-python-dateutil
+streamlit==1.51.0
+pandas==2.3.3
+numpy==2.3.4
+requests==2.32.5
+plotly==6.4.0
+python-dateutil==2.9.0
