--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.51.0
-pandas==2.3.3
-numpy==2.3.4
-requests==2.32.5
-plotly==6.4.0
-python-dateutil==2.9.0
+pandas==2.0.3
+numpy==1.24.3
+ta-lib==0.4.26
+python-dotenv==1.0.0
+mexc-api==1.0.0
+requests==2.31.0
+websocket-client==1.6.3
